# AtomCompiler

./: .clang-format  .gitignore  ATC.g4  CMakeLists.txt  LICENSE  README.md  result.txt
include/: CmdOption.h  Common.h
include/backend/arm/: CodeGenerator.h
include/backend/riscv/: BasicBlock.h  CodeGenerator.h  Function.h  Instruction.h  Module.h  RegAllocator.h  Register.h
include/frontend/AST/: ASTBuilder.h  ASTBuilderVisitor.h  ASTDumper.h  ASTVisitor.h  AtomASTBuilder.h  AtomASTDumper.h  AtomASTVisitor.h  CompUnit.h  DataType.h  Decl.h  Expression.h  FuncDef.h  Function.h  FunctionDef.h  Node.h  Scope.h  SemanticChecker.h  Statement.h  TreeNode.h  Variable.h
include/frontend/AST/tools/: ASTBuilder.h  ASTVisitor.h  DumpASTVisitor.h  SemanticChecker.h  dumpASTVisitor.h
include/frontend/IR/: BasicBlock.h  Function.h  IRBuilder.h  Instruction.h  Module.h  Type.h  Value.h
include/frontend/atomIR/: BasicBlock.h  Function.h  IRBuilder.h  IRDumper.h  Instruction.h  Module.h  Type.h  Value.h
include/frontend/llvmIR/: IRBuilder.h
include/frontend/visitors/: ASTBuilderVisitor.h  dumpSourceASTVisitor.h
src/: CmdOption.cpp  main.cpp
src/backend/: CMakeLists.txt
src/backend/arm/: CodeGenerator.cpp
src/backend/riscv/: BasicBlock.cpp  CodeGenerator.cpp  Function.cpp  Instruction.cpp  RegAllocator.cpp  Register.cpp
src/frontend/: CMakeLists.txt
src/frontend/AST/: ASTBuilder.cpp  ASTDumper.cpp  ASTVisitor.cpp  AtomASTBuilder.cpp  AtomASTDumper.cpp  AtomASTVisitor.cpp  Expression.cpp  Scope.cpp  SemanticChecker.cpp  TreeNode.cpp  Variable.cpp
src/frontend/AST/tools/: ASTBuilder.cpp  ASTVisitor.cpp  DumpASTVisitor.cpp  SemanticChecker.cpp  dumpASTVisitor.cpp
src/frontend/IR/: BasicBlock.cpp  Function.cpp  IRBuilder.cpp  Instruction.cpp  Module.cpp  Type.cpp  Value.cpp
src/frontend/atomIR/: BasicBlock.cpp  Function.cpp  IRBuilder.cpp  IRDumper.cpp  Instruction.cpp  Module.cpp  Type.cpp  Value.cpp
src/frontend/llvmIR/: IRBuilder.cpp
src/frontend/visitors/: ASTBuilderVisitor.cpp  dumpSourceASTVisitor.cpp
tests/: CMakeLists.txt
tests/sy2022/: CMakeLists.txt
tests/sy2022/functional/: 21_if_test2.sy  25_while_if.sy  39_op_priority5.sy  41_unary_op2.sy  44_stmt_expr.sy  48_assign_complex_expr.sy  49_if_complex_expr.sy  50_short_circuit.sy  52_scope.sy  53_scope2.sy  63_big_int_mul.sy  64_calculator.sy  65_color.sy  66_exgcd.sy  67_reverse_output.sy  83_long_array.sy  85_long_code.sy  89_many_globals.sy  92_register_alloc.sy  CMakeLists.txt
tests/sy2022/hidden_functional/: 17_maximal_clique.sy  21_union_find.sy  26_scope4.sy  28_side_effect2.sy  30_many_dimensions.sy  31_many_indirections.sy  CMakeLists.txt
tests/sy2022/performance/: CMakeLists.txt  derich1.out  derich2.out  derich3.out  large_loop_array_1.sy  large_loop_array_2.sy  large_loop_array_3.sy  layernorm1.out  layernorm2.out  layernorm3.out  layernorm3.sy  matmul1.sy  recursion_fabonacci-1.sy  recursion_fabonacci-2.sy  recursion_fabonacci-3.sy  recursive_call_1.sy  recursive_call_2.sy  recursive_call_3.sy  sl2.sy
